output/HilcoPencilParserParser.java
// Generated from /Users/timothyhilgenberg/go/src/github.com/timhilco/go-PencilCalculator/HilcoPencilParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HilcoPencilParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, IF=7, THEN=8, ELSE=9, 
		CASE=10, CASE_IS=11, CASE_END=12, SWITCH=13, SWITCH_END=14, AND=15, OR=16, 
		NOT=17, INT=18, ID=19, STRING=20, FLOAT=21, DATE=22, ATFUNCTION=23, CLASSNAME=24, 
		PERCENT=25, NEWLINE=26, WS=27, DOT=28, COLON=29, SEMI=30, COMMA=31, EQUALS=32, 
		LBRACKET=33, RBRACKET=34, CURLYLBRACKET=35, CURLYRBRACKET=36, DOTDOT=37, 
		LPAREN=38, RPAREN=39, NOT_EQUALS=40, LT=41, LTE=42, GT=43, GTE=44, PLUS=45, 
		MINUS=46, TIMES=47, DIV=48, EXPONENTIATE=49;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_caseStatement = 2, RULE_caseList = 3, 
		RULE_caseItem = 4, RULE_switchStatement = 5, RULE_ifStatement = 6, RULE_logical = 7, 
		RULE_relationalExpression = 8, RULE_addingExpression = 9, RULE_multiplyingExpression = 10, 
		RULE_factor = 11, RULE_base = 12, RULE_name = 13, RULE_atFunction = 14, 
		RULE_dataAccessor = 15, RULE_fieldName = 16, RULE_argList = 17, RULE_specialKeyword = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "caseStatement", "caseList", "caseItem", "switchStatement", 
			"ifStatement", "logical", "relationalExpression", "addingExpression", 
			"multiplyingExpression", "factor", "base", "name", "atFunction", "dataAccessor", 
			"fieldName", "argList", "specialKeyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'::'", "'today'", "'true'", "'false'", "'nil'", "'default'", "'if'", 
			"'then'", "'else'", "'case'", "'is'", "'endcase'", "'switch'", "'endswitch'", 
			"'AND'", "'OR'", "'NOT'", null, null, null, null, null, null, null, null, 
			null, null, "'.'", "':'", "';'", "','", "'='", "'['", "']'", "'{'", "'}'", 
			"'..'", "'('", "')'", "'~='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
			"'*'", "'/'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, "IF", "THEN", "ELSE", "CASE", 
			"CASE_IS", "CASE_END", "SWITCH", "SWITCH_END", "AND", "OR", "NOT", "INT", 
			"ID", "STRING", "FLOAT", "DATE", "ATFUNCTION", "CLASSNAME", "PERCENT", 
			"NEWLINE", "WS", "DOT", "COLON", "SEMI", "COMMA", "EQUALS", "LBRACKET", 
			"RBRACKET", "CURLYLBRACKET", "CURLYRBRACKET", "DOTDOT", "LPAREN", "RPAREN", 
			"NOT_EQUALS", "LT", "LTE", "GT", "GTE", "PLUS", "MINUS", "TIMES", "DIV", 
			"EXPONENTIATE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HilcoPencilParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HilcoPencilParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public LogicalContext logical() {
			return getRuleContext(LogicalContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public CaseStatementContext caseStatement() {
			return getRuleContext(CaseStatementContext.class,0);
		}
		public SwitchStatementContext switchStatement() {
			return getRuleContext(SwitchStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case NOT:
			case INT:
			case ID:
			case STRING:
			case FLOAT:
			case DATE:
			case ATFUNCTION:
			case CLASSNAME:
			case PERCENT:
			case LPAREN:
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				logical();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				ifStatement();
				}
				break;
			case CASE:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				caseStatement();
				}
				break;
			case SWITCH:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				switchStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseStatementContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(HilcoPencilParserParser.CASE, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode CASE_IS() { return getToken(HilcoPencilParserParser.CASE_IS, 0); }
		public CaseListContext caseList() {
			return getRuleContext(CaseListContext.class,0);
		}
		public TerminalNode CASE_END() { return getToken(HilcoPencilParserParser.CASE_END, 0); }
		public CaseStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterCaseStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitCaseStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitCaseStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseStatementContext caseStatement() throws RecognitionException {
		CaseStatementContext _localctx = new CaseStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_caseStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(CASE);
			setState(47);
			statement();
			setState(48);
			match(CASE_IS);
			setState(49);
			caseList();
			setState(50);
			match(CASE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseListContext extends ParserRuleContext {
		public List<CaseItemContext> caseItem() {
			return getRuleContexts(CaseItemContext.class);
		}
		public CaseItemContext caseItem(int i) {
			return getRuleContext(CaseItemContext.class,i);
		}
		public CaseListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterCaseList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitCaseList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitCaseList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseListContext caseList() throws RecognitionException {
		CaseListContext _localctx = new CaseListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_caseList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			caseItem();
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << INT) | (1L << ID) | (1L << STRING) | (1L << FLOAT) | (1L << DATE) | (1L << ATFUNCTION) | (1L << CLASSNAME) | (1L << PERCENT) | (1L << LPAREN))) != 0)) {
				{
				{
				setState(53);
				caseItem();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CaseItemContext extends ParserRuleContext {
		public BaseContext base() {
			return getRuleContext(BaseContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(HilcoPencilParserParser.SEMI, 0); }
		public CaseItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_caseItem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterCaseItem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitCaseItem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitCaseItem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CaseItemContext caseItem() throws RecognitionException {
		CaseItemContext _localctx = new CaseItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_caseItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			base();
			setState(60);
			match(T__0);
			setState(61);
			statement();
			setState(62);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwitchStatementContext extends ParserRuleContext {
		public TerminalNode SWITCH() { return getToken(HilcoPencilParserParser.SWITCH, 0); }
		public CaseListContext caseList() {
			return getRuleContext(CaseListContext.class,0);
		}
		public TerminalNode SWITCH_END() { return getToken(HilcoPencilParserParser.SWITCH_END, 0); }
		public SwitchStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterSwitchStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitSwitchStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitSwitchStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwitchStatementContext switchStatement() throws RecognitionException {
		SwitchStatementContext _localctx = new SwitchStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_switchStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(SWITCH);
			setState(65);
			caseList();
			setState(66);
			match(SWITCH_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(HilcoPencilParserParser.IF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode THEN() { return getToken(HilcoPencilParserParser.THEN, 0); }
		public TerminalNode ELSE() { return getToken(HilcoPencilParserParser.ELSE, 0); }
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(IF);
			setState(69);
			statement();
			setState(70);
			match(THEN);
			setState(71);
			statement();
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				{
				setState(72);
				match(ELSE);
				}
				setState(73);
				statement();
				}
				break;
			case 2:
				{
				{
				}
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalContext extends ParserRuleContext {
		public List<RelationalExpressionContext> relationalExpression() {
			return getRuleContexts(RelationalExpressionContext.class);
		}
		public RelationalExpressionContext relationalExpression(int i) {
			return getRuleContext(RelationalExpressionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(HilcoPencilParserParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(HilcoPencilParserParser.AND, i);
		}
		public List<TerminalNode> OR() { return getTokens(HilcoPencilParserParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(HilcoPencilParserParser.OR, i);
		}
		public TerminalNode NOT() { return getToken(HilcoPencilParserParser.NOT, 0); }
		public LogicalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterLogical(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitLogical(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitLogical(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalContext logical() throws RecognitionException {
		LogicalContext _localctx = new LogicalContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logical);
		int _la;
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__2:
			case T__3:
			case T__4:
			case T__5:
			case INT:
			case ID:
			case STRING:
			case FLOAT:
			case DATE:
			case ATFUNCTION:
			case CLASSNAME:
			case PERCENT:
			case LPAREN:
			case MINUS:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				relationalExpression();
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==AND || _la==OR) {
					{
					{
					setState(78);
					_la = _input.LA(1);
					if ( !(_la==AND || _la==OR) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(79);
					relationalExpression();
					}
					}
					setState(84);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(NOT);
				setState(86);
				relationalExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationalExpressionContext extends ParserRuleContext {
		public List<AddingExpressionContext> addingExpression() {
			return getRuleContexts(AddingExpressionContext.class);
		}
		public AddingExpressionContext addingExpression(int i) {
			return getRuleContext(AddingExpressionContext.class,i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(HilcoPencilParserParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(HilcoPencilParserParser.EQUALS, i);
		}
		public List<TerminalNode> NOT_EQUALS() { return getTokens(HilcoPencilParserParser.NOT_EQUALS); }
		public TerminalNode NOT_EQUALS(int i) {
			return getToken(HilcoPencilParserParser.NOT_EQUALS, i);
		}
		public List<TerminalNode> GT() { return getTokens(HilcoPencilParserParser.GT); }
		public TerminalNode GT(int i) {
			return getToken(HilcoPencilParserParser.GT, i);
		}
		public List<TerminalNode> GTE() { return getTokens(HilcoPencilParserParser.GTE); }
		public TerminalNode GTE(int i) {
			return getToken(HilcoPencilParserParser.GTE, i);
		}
		public List<TerminalNode> LT() { return getTokens(HilcoPencilParserParser.LT); }
		public TerminalNode LT(int i) {
			return getToken(HilcoPencilParserParser.LT, i);
		}
		public List<TerminalNode> LTE() { return getTokens(HilcoPencilParserParser.LTE); }
		public TerminalNode LTE(int i) {
			return getToken(HilcoPencilParserParser.LTE, i);
		}
		public RelationalExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relationalExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterRelationalExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitRelationalExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitRelationalExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationalExpressionContext relationalExpression() throws RecognitionException {
		RelationalExpressionContext _localctx = new RelationalExpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_relationalExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			addingExpression();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << NOT_EQUALS) | (1L << LT) | (1L << LTE) | (1L << GT) | (1L << GTE))) != 0)) {
				{
				{
				setState(90);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << NOT_EQUALS) | (1L << LT) | (1L << LTE) | (1L << GT) | (1L << GTE))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(91);
				addingExpression();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddingExpressionContext extends ParserRuleContext {
		public List<MultiplyingExpressionContext> multiplyingExpression() {
			return getRuleContexts(MultiplyingExpressionContext.class);
		}
		public MultiplyingExpressionContext multiplyingExpression(int i) {
			return getRuleContext(MultiplyingExpressionContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(HilcoPencilParserParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(HilcoPencilParserParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(HilcoPencilParserParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(HilcoPencilParserParser.MINUS, i);
		}
		public AddingExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addingExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterAddingExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitAddingExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitAddingExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddingExpressionContext addingExpression() throws RecognitionException {
		AddingExpressionContext _localctx = new AddingExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_addingExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			multiplyingExpression();
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				setState(98);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(99);
				multiplyingExpression();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplyingExpressionContext extends ParserRuleContext {
		public List<FactorContext> factor() {
			return getRuleContexts(FactorContext.class);
		}
		public FactorContext factor(int i) {
			return getRuleContext(FactorContext.class,i);
		}
		public List<TerminalNode> TIMES() { return getTokens(HilcoPencilParserParser.TIMES); }
		public TerminalNode TIMES(int i) {
			return getToken(HilcoPencilParserParser.TIMES, i);
		}
		public List<TerminalNode> DIV() { return getTokens(HilcoPencilParserParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(HilcoPencilParserParser.DIV, i);
		}
		public MultiplyingExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplyingExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterMultiplyingExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitMultiplyingExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitMultiplyingExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplyingExpressionContext multiplyingExpression() throws RecognitionException {
		MultiplyingExpressionContext _localctx = new MultiplyingExpressionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_multiplyingExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			factor();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TIMES || _la==DIV) {
				{
				{
				setState(106);
				_la = _input.LA(1);
				if ( !(_la==TIMES || _la==DIV) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(107);
				factor();
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FactorContext extends ParserRuleContext {
		public TerminalNode MINUS() { return getToken(HilcoPencilParserParser.MINUS, 0); }
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public BaseContext base() {
			return getRuleContext(BaseContext.class,0);
		}
		public FactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_factor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).enterFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HilcoPencilParserListener ) ((HilcoPencilParserListener)listener).exitFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HilcoPencilParserVisitor ) return ((HilcoPencilParserVisitor<? extends T>)visitor).visitFactor(this);
			else return visitor.visitChildren(this);
		}
	}
